--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,3 +2,15 @@ body {
     background-color: rgb(0,0,0);
     color: grey;
 }
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    color: rgb(255,0,0)
+}
+
+a:visited {
+    color: grey;
+}
