--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@ nav a{
     }
 
 a:hover {
-    color: rgb(121, 14, 121)
+    color: rgb(121, 14, 121);
 }
 
 nav ul{
@@ -20,4 +20,13 @@ nav ul{
     padding-left: 0;
     display: flex;
 
+}
+
+header{
+    padding: 0px 30px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 10;
+    box-shadow: 0px 0px 10px rgba(121, 14, 121,0.5);
 }
