--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,10 +6,10 @@ body {
 nav a{
     text-decoration: none;
     text-transform: uppercase;
-    color: #fff;
+    color: grey;
     display: block;
     padding: 1em 1em;
-    }
+}
 
 a:hover {
     color: rgb(121, 14, 121);
@@ -23,10 +23,18 @@ nav ul{
 }
 
 header{
-    padding: 0px 30px;
-    position: fixed;
     width: 100%;
     top: 0;
     z-index: 10;
     box-shadow: 0px 0px 10px rgba(121, 14, 121,0.3);
+}
+
+.bienvenue h1{
+    text-align: center;
+}
+
+.bienvenue video{
+    display: flex;
+    width: 50%;
+    
 }
