--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,9 +24,10 @@ nav ul{
 
 header{
     width: 100%;
+    position: fixed;
+    background-color: black;
     top: 0;
     z-index: 10;
-    box-shadow: 0px 0px 10px rgba(121, 14, 121,0.3);
 }
 
 .bienvenue h1{
