--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(0,0,0);
+    background-color: rgb(255,255,255);
     color: grey;
 }
 
@@ -27,6 +27,10 @@ header{
     background-color: black;
     top: 0;
     z-index: 10;
+}
+
+footer{
+    background-color: black;
 }
 
 .bienvenue h1{
