--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(255,255,255);
     color: grey;
+    margin:0px;
 }
 
 nav a{
@@ -24,13 +25,17 @@ nav ul{
 
 header{
     width: 100%;
-    background-color: black;
+    background-color: rgb(255,255,255);
     top: 0;
     z-index: 10;
 }
 
+main{
+    background-color: rgb(0,0,0);
+}
+
 footer{
-    background-color: black;
+    background-color: rgb(255,255,255);
 }
 
 .bienvenue h1{
