--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(255,255,255);
+    background-color: grey;
     color: grey;
     margin:0px;
 }
@@ -20,18 +20,36 @@ nav ul {
     list-style: none;
     padding-left: 0;
     display: flex;
-
 }
 
 header {
-    width: 100%;
+    width: 75%;
+    height: 24%;
     background-color: rgb(255,255,255);
     top: 0;
     z-index: 10;
+    box-shadow: 0px 10px 10px rgba(0,0,0,0.5);
+    position: fixed;
+}
+
+.Logos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu ul {
+    display: flex;
+    justify-content: center;
+}
+
+video {
+    width: 100%;
 }
 
 main {
-    background-color: rgb(0,0,0);
+    background-color: rgb(255,255,255);
+    width: 75%;
 }
 
 .animation {
