--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,6 +10,7 @@ nav a{
     color: grey;
     display: block;
     padding: 1em 1em;
+    margin: 0px 50px;
 }
 
 a:hover {
@@ -32,6 +33,11 @@ header {
     position: fixed;
 }
 
+.banner {
+    display: flex;
+    justify-content: center;
+}
+
 .Logos {
     display: flex;
     justify-content: center;
@@ -52,6 +58,11 @@ main {
     width: 75%;
 }
 
+.main {
+    display: flex;
+    justify-content: center;
+}
+
 .animation {
     position: relative;
     animation: animate 0.4s
@@ -61,5 +72,12 @@ main {
 }
 
 footer {
-    background-color: rgb(255,255,255);
+    width: 75%;
+    height: 24%;
+    background-color: rgb(0,255,255);
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
 }
