--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,8 +53,18 @@ header {
     justify-content: center;
 }
 
+.bienvenue {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 10px 15px 5px rgba(0,0,0, 0.5);
+    width: 50%;
+}
+
 video {
-    width: 100%;
+    width: 50%;
+    height: 50%;
 }
 
 main {
