--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,6 +56,7 @@ header {
 .bienvenue {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     box-shadow: 0px 10px 15px 5px rgba(0,0,0, 0.5);
     width: 50%;
