--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,7 +58,7 @@ header {
     flex-direction: column;
     align-items: center;
     box-shadow: 0px 10px 15px 5px rgba(0,0,0, 0.5);
-    width: 50%;
+    width: 95%;
 }
 
 video {
@@ -67,6 +67,9 @@ video {
 }
 
 main {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     background-color: rgb(255,255,255);
     width: 75%;
     padding-top: 250px;
