--- a/CSS/style.css
+++ b/CSS/style.css
@@ -61,9 +61,9 @@ header {
     width: 95%;
 }
 
-video {
-    width: 50%;
-    height: 50%;
+.bienvenue video {
+    width: 100%;
+    height: 100%;
 }
 
 main {
