--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family : "EB Garamond";
-    src : url('/font/police/EBGaramond-Regular.woff2');
+    src : url('/font/EB Garamond/EBGaramond-Regular.woff2');
     font-weight : normal;
     font-style : normal;
 }
