--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family : "EB Garamond";
+    font-family : "EB-Garamond";
     src : url('/font/EB Garamond/EBGaramond-Regular.woff2');
     font-weight : normal;
     font-style : normal;
@@ -11,6 +11,7 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     margin: 0px;
+    font-family: EB-Garamond;
 }
 
 header {
