--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,10 @@
 @font-face {
-    font-family : 'noto';
-    src : url('/font/noto/NotoSerifJP-Medium-Alphabetic.woff2');
-    font-weight : normal;
-    font-style : normal;
+    font-family: 'noto';
+    src: url('/font/noto/NotoSerifJP-ExtraLight-Alphabetic.woff2') format('woff2'),
+        url('/font/noto/NotoSerifJP-ExtraLight-Alphabetic.woff') format('woff');
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
 }
 
 
@@ -11,7 +13,6 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     margin: 0px;
-    font-family: noto;
 }
 
 header {
@@ -99,4 +100,3 @@ footer {
     height: 24%;
     box-shadow: 0px 0px 20px 0px;
 }
-
