--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,8 @@
 @font-face {
-    font-family: 'noto';
-    src: url('/font/noto/NotoSerifJP-ExtraLight-Alphabetic.woff2') format('woff2'),
-        url('/font/noto/NotoSerifJP-ExtraLight-Alphabetic.woff') format('woff');
-    font-weight: 200;
-    font-style: normal;
-    font-display: swap;
+    font-family : "perma";
+    src : url('/font/permanent/PermanentMarker-Regular.woff2');
+    font-weight : normal;
+    font-style : normal;
 }
 
 
@@ -13,6 +11,7 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     margin: 0px;
+    font-family: perma;
 }
 
 header {
@@ -100,3 +99,4 @@ footer {
     height: 24%;
     box-shadow: 0px 0px 20px 0px;
 }
+
