--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,8 +28,9 @@ header {
     height: 25%;
     background-color: white;
     top: 0;
-    box-shadow: 0px 10px 10px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
     position: fixed;
+    z-index: 1;
 }
 
 .logos {
@@ -71,7 +72,7 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0px 0px 20px 0px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
     width: 95%;
 }
 
@@ -87,7 +88,7 @@ main {
     background-color: #F6F6F6;
     width: 75%;
     padding-top: 275px;
-    box-shadow: 0px 0px 20px 0px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
 }
 
 .animation {
@@ -103,5 +104,5 @@ footer {
     justify-content: center;
     width: 75%;
     height: 24%;
-    box-shadow: 0px 0px 20px 0px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
 }
