--- a/CSS/style.css
+++ b/CSS/style.css
@@ -68,12 +68,25 @@ nav {
     width: 100%;
 }
 
-.bienvenue {
+.plat_du_jour {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.plat_du_jour p {
+    margin-left: 25%; 
+    padding-right: 25%;
+    text-align: center;
+}
+
+main div{
     display: flex;
     flex-direction: column;
     align-items: center;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
     width: 95%;
+    margin-bottom: 2%;
 }
 
 .bienvenue video {
@@ -106,3 +119,4 @@ footer {
     height: 24%;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
 }
+
