--- a/CSS/style.css
+++ b/CSS/style.css
@@ -104,6 +104,38 @@ main {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
 }
 
+.grid {
+    display: flex;
+    
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: white;
+}
+
+.container:hover .overlay {
+  opacity: 0.5;
+}
+
+.overlay p {
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
 .animation {
     position: relative;
     animation: animate 0.4s
