--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,6 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     margin: 0px;
-    
 }
 
 header {
@@ -24,9 +23,8 @@ header {
     flex-wrap: wrap;
     justify-content: center;
     width: 75%;
-    height: 25%;
+    height: 35%;
     background-color: white;
-    top: 0;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
     position: fixed;
     z-index: 1;
@@ -36,13 +34,14 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 20%;
 }
 
 header img {
     padding: 0px 20px;
 }
 
-nav a {
+header nav a {
     text-decoration: none;
     text-transform: uppercase;
     color: grey;
