--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,6 @@
 }
 
 html {
-    font-size: 18px;
     font-family: "Numans";
 }
 
@@ -20,19 +19,27 @@ body {
 
 header {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
+    flex-wrap: wrap;
+    width: 75%;
     background-color: white;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
-    position: fixed;
-    z-index: 1;
+    z-index: 667;
+}
+
+header .banner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+    width: 100%;
 }
 
 .logos {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20%;
+    width: 10%;
 }
 
 header img {
@@ -45,22 +52,25 @@ header nav a {
     color: grey;
     display: block;
     padding: 1em 1em;
-    margin: 0px 50px;
+    margin: 0em 2em;
 }
 
 a:hover {
     color: rgb(204, 153, 50);
 }
 
-nav ul {
+header nav ul {
     list-style: none;
     padding-left: 0;
     display: flex;
+    width: 20%;
+    top: 0;
+    position: sticky;
 }
 
 nav {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 
@@ -72,12 +82,12 @@ main {
     flex-wrap: wrap;
     background-color: #F6F6F6;
     width: 75%;
-    padding-top: 275px;
+    padding-top: 19%;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
 }
 
 
-main div{
+main div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -100,7 +110,6 @@ main div{
 .plat-du-jour {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
 }
 
 .plat-du-jour img {
@@ -109,6 +118,7 @@ main div{
 
 .plat-du-jour p {
     text-align: center;
+    padding-left: 10%;
 }
 
 /* Plats favoris */
