--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,7 +23,6 @@ header {
     flex-wrap: wrap;
     width: 75%;
     background-color: white;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
     z-index: 667;
 }
 
@@ -31,7 +30,6 @@ header .banner {
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
     width: 100%;
 }
 
@@ -39,14 +37,14 @@ header .banner {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 10%;
+    width: 15%;
 }
 
 header img {
     padding: 0px 20px;
 }
 
-header nav a {
+nav a {
     text-decoration: none;
     text-transform: uppercase;
     color: grey;
@@ -59,18 +57,22 @@ a:hover {
     color: rgb(204, 153, 50);
 }
 
-header nav ul {
+nav ul {
     list-style: none;
     padding-left: 0;
     display: flex;
     width: 20%;
     top: 0;
-    position: sticky;
 }
 
 nav {
     display: flex;
     justify-content: flex-start;
+    background-color: goldenrod;
+    top: 0;
+    position: sticky;
+    z-index: 667;
+    padding: 0% 14.3%;
 }
 
 
@@ -82,7 +84,7 @@ main {
     flex-wrap: wrap;
     background-color: #F6F6F6;
     width: 75%;
-    padding-top: 19%;
+    padding-top: 2%;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
 }
 
@@ -186,4 +188,3 @@ footer {
     height: 24%;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
 }
-
