--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family : "Numans";
-    src : url("../font/numans/Numans-Regular.woff2"),
-    url("../font/numans/Numans-Regular.woff");
+    src : url("../Fonts/numans/Numans-Regular.woff2"),
+    url("../Fonts/numans/Numans-Regular.woff");
     font-weight : normal;
     font-style : normal;
 }
@@ -184,6 +184,9 @@ main div {
 footer {
     display: flex;
     justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
     width: 75%;
     height: 24%;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
