--- a/CSS/style.css
+++ b/CSS/style.css
@@ -319,7 +319,7 @@ footer {
     #menuToggle span
     {
         display: block;
-        width: 33px;
+        width: 25px;
         height: 4px;
         margin-bottom: 5px;
         position: relative;
@@ -400,7 +400,9 @@ footer {
     .plat-du-jour {
         display: flex;
         flex-direction: column;
+        size: 10%;
     }
+
 
     main{
         margin-left: 10%;
