--- a/CSS/style.css
+++ b/CSS/style.css
@@ -415,4 +415,12 @@ footer {
         margin-left: 10%;
 
     }
+    .vache{
+        display: none;
+    }
+    /* banner */
+.Logo-murat{
+    padding-left: 70px;
+}
+
 }
