--- a/CSS/style.css
+++ b/CSS/style.css
@@ -60,6 +60,7 @@ nav ul {
     padding-inline-start: 0px;
 }
 
+
 /***** C O R P S   D E   P A G E *****/
 
 main {
@@ -79,6 +80,7 @@ main div {
     align-items: center;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
     width: 95%;
+    margin-bottom: 2%;
 }
 
 
@@ -160,6 +162,7 @@ main div {
   background-color: rgba(204, 153, 50, 0.5);
 }
 
+
 /* Équipe */
 
 .equipe p {
@@ -167,6 +170,9 @@ main div {
     margin-right: 10%;
 }
 
+.slideshow {
+    box-shadow: 0px 0px 0;
+}
 
 @keyframes animate {
     from {right: -300px; opacity: 0} to {right: 0; opacity: 1}
