Final version reservation.html

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -127,29 +127,29 @@ main div {
 }
 
 .overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s ease;
-  background-color: white;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: white;
 }
 
 .plats-favoris td:hover .overlay {
-  opacity: .8;
+    opacity: .8;
 }
 
 .plats-favoris td p {
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 
@@ -261,6 +261,14 @@ main div {
 
 #reservation {
     flex-direction: column;
+}
+
+#reservation h1 {
+    letter-spacing: 0.3em;
+}
+
+label {
+    font-style: bold;
 }
 
 input[type="submit"] {
