--- a/CSS/style.css
+++ b/CSS/style.css
@@ -264,13 +264,14 @@ main div {
 
 /* Reservation */
 
-#reservation {
+.reservation {
     flex-direction: column;
+    box-shadow: 0px 20px
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
 }
 
-#reservation h1 {
+.reservation h1 {
     letter-spacing: 0.3em;
-    margin-block-start: 0;
 }
 
 label {
